src/test/deca/context/valid/SansObjet/DeclVar-Lower-boolean-int-float.deca
// Description:
//    Declaration of a boolean variable using < operation between a int variable and float .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  5; 
    float y = 10.01; 
    boolean z = 5 < 10.01; 
}
