src/test/deca/context/invalid/SansObjet/DeclVar-LE-int-int-string.deca
// Description:
//    Declaration of a int variable using <= operation between a int variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  10; 
    string y = "Everyone"; 
    int z = 10 <= "Everyone"; 
}
